@@ -70,6 +70,7 @@ struct CommandLineOptions
 	double jobMatrixDeltaT; /* seconds */
 	char *primaryBand;	/* for VLITE */
 	char *historyFile;	/* if set, dump contents to FITS history */
+	enum EOPMergeMode eopMergeMode;
 };
 
 const DifxInput *DifxInput2FitsHeader(const DifxInput *D,
@@ -98,11 +99,7 @@ const DifxInput *DifxInput2FitsMC(const DifxInput *D,
 
 const DifxInput *DifxInput2FitsUV(const DifxInput *D,
 	struct fits_keywords *p_fits_keys, struct fitsPrivate *out, 
-	struct CommandLineOptions *opts);
-
-const DifxInput *dummy_DifxInput2FitsUV(const DifxInput *D,
-        struct fits_keywords *p_fits_keys,
-	struct fitsPrivate *out, struct CommandLineOptions *opts);
+	const struct CommandLineOptions *opts);
 
 const DifxInput *DifxInput2FitsFL(const DifxInput *D,
 	struct fits_keywords *p_fits_keys, struct fitsPrivate *out);
@@ -127,6 +124,6 @@ const DifxInput *DifxInput2FitsGD(const DifxInput *D,
 
 const DifxInput *DifxInput2FitsGM(const DifxInput *D,
 	struct fits_keywords *p_fits_keys, struct fitsPrivate *out,
-	struct CommandLineOptions *opts);
+	const struct CommandLineOptions *opts);
 
 #endif
